# simple-tools

./: .gitignore  README.md  pyproject.toml
adb-automate/: adb_functionality.py  command_runner.py  disbl_dev_szku.py  helper_lists.py  install_drivers.py  main.py  mods_functionality.py  package_management.py
adb-automate/functionality/: adb.py  command_runner.py  fastboot.py  mods.py  mods_list_src.py
adb-automate/tui/: tui.py
adb_automate/: disbl_dev_szku.py  install_drivers.py  main.py  private_paste_bin.py  send_data.py
adb_automate/functionality/: adb.py  command_runner.py  fastboot.py  mods.py
adb_automate/tui/: tui.py  tui.tcss
ado_vdo_dwnlodr/src/: main.py  mainpage.py
ado_vdo_dwnlodr/src/utils/: ytdlp_impl.py
printready_idphoto/src/: main.py
printready_idphoto/src/utils/: img_resize.py  make_imgrid.py  print_canvas_size.py
